<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".IncomeFragment">

    <TextView
        android:id="@+id/user_interaction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.Material3.ActionBar.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/user_interaction" />

    <com.google.android.material.textfield.TextInputLayout
android:id="@+id/income_layout"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/user_interaction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/income"
            android:hint="@string/income"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="20sp"
        android:backgroundTint="@color/ash"
        app:layout_constraintTop_toBottomOf="@id/income_layout"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="Create a new user" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/next"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/income_layout"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="Create a new user" />

</androidx.constraintlayout.widget.ConstraintLayout>